# common_template

./: CMakeLists.txt  app.yaml  deploy.sh  install_pkg_msys2.sh
cmake/: common_templateConfig.cmake.in  common_templateMacros.cmake
include/: check_dep.hpp
modules/Core/: CMakeLists.txt
modules/Core/cmake/: common_templateCoreConfig.cmake
modules/Core/include/Core/: mylib.h
modules/Core/src/: mylib.cpp
modules/Sonic/: CMakeLists.txt
modules/Sonic/cmake/: common_templateSonicConfig.cmake
modules/Sonic/include/sonic/dom/: type.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  hello_world_test.cpp
